[package]
name = "astree"
version = "0.3.3"
description = " A command line tool for drawing tree structures with ascii characters"
readme = "README.md"
homepage = "https://github.com/BorgeatRemy/ascii_tree"
repository = "https://github.com/BorgeatRemy/ascii_tree"
keywords = ["cli", "ascii", "tree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.35", features = ["derive"]}
itertools = "0.14.0"
num = "0.4.0"
